Upgrade modernizer-maven-plugin to 3.1.0